# LineairDB

./: .clang-format  .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  Doxyfile  Doxyfile.debug  LICENSE  LICENSE-3RD-PARTY.md  README.md  tsan_suppressions.txt
.github/workflows/: ccpp.yml  clang-format.yml
bench/: CMakeLists.txt
bench/microbench/: lock_bench.cpp
bench/microbench/index/: indexbench.cpp
bench/microbench/lock/: lock_bench.cpp
bench/microbench/recoverytime/: recovery_time_bench.cpp
bench/ycsb/: benchmark.cpp  cmdline.cpp  interface.h  random_generator.hpp  workload.h
cmake/modules/: FindJeMalloc.cmake
docs/: README.md  index.html  roadmap.md
docs/html/: README_8md.html  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  autotoc_md2.html  autotoc_md3.html  classLineairDB_1_1Database-members.html  classLineairDB_1_1Database.html  classLineairDB_1_1Database.js  classLineairDB_1_1Transaction-members.html  classLineairDB_1_1Transaction.html  classLineairDB_1_1Transaction.js  class_lineair_d_b_1_1_database-members.html  class_lineair_d_b_1_1_database.html  class_lineair_d_b_1_1_database.js  class_lineair_d_b_1_1_transaction-members.html  class_lineair_d_b_1_1_transaction.html  class_lineair_d_b_1_1_transaction.js  classes.html  config_8h.html  config_8h__dep__incl.map  config_8h__dep__incl.md5  config_8h__incl.map  config_8h__incl.md5  config_8h_source.html  database_8h.html  database_8h__dep__incl.map  database_8h__dep__incl.md5  database_8h__incl.map  database_8h__incl.md5  database_8h_source.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_9899bcca53038e10eaca02950c72ee58.html  dir_9899bcca53038e10eaca02950c72ee58.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_enum.html  functions_eval.html  (+43 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  (+22 more)
example/: CMakeLists.txt  create_secondary_index.cpp  create_table.cpp  example.cpp  read_and_write_primary_index.cpp  read_and_write_secondary_index.cpp  simple_example.cpp
include/lineairdb/: config.h  database.h  i_secondary_index.h  key_serializer.h  lineairdb.h  pklist_codec.h  pklist_util.h  secondary_index_option.h  table.h  transaction.h  tx_status.h
src/: CMakeLists.txt  database.cpp  database_impl.h  table.cpp  table.h  transaction_impl.cpp  transaction_impl.h  types.h
src/callback/: callback_manager.cpp  callback_manager.h  callback_manager_base.h
src/callback/impl/: thread_local_callback_manager.cpp  thread_local_callback_manager.h
src/concurrency_control/: concurrency_control_base.h  pivot_object.hpp
src/concurrency_control/impl/: silo_nwr.hpp  two_phase_locking.hpp
src/index/: concurrent_point_index_base.h  concurrent_table.cpp  concurrent_table.h  secondary_index.cpp  secondary_index.h  secondary_index_interface.h  secondary_index_type.h
src/index/impl/: mpmc_concurrent_set_impl.cpp  mpmc_concurrent_set_impl.h
src/index/point_index/: concurrent_point_index_base.h
src/index/point_index/impl/: mpmc_concurrent_set_impl.cpp  mpmc_concurrent_set_impl.h
src/index/precision_locking_index/: index.hpp
src/index/precision_locking_index/point_index/: mpmc_concurrent_set_impl.cpp  mpmc_concurrent_set_impl.h  mpmc_concurrent_set_impl.hpp
src/index/precision_locking_index/range_index/: precision_locking.cpp  precision_locking.h
src/index/range_index/: range_index_base.h
src/index/range_index/impl/: epoch_based_range_index.cpp  epoch_based_range_index.h  precision_locking.cpp  precision_locking.h
src/lock/: lock.h
src/lock/impl/: readers_writers_lock.hpp  ttas_lock.hpp
src/recovery/: checkpoint_manager.hpp  logger.cpp  logger.h  logger_base.h
src/recovery/impl/: thread_local_logger.cpp  thread_local_logger.h
src/table/: table.cpp  table.h  table_dictionary.hpp
src/thread_pool/: thread_pool.cpp  thread_pool.h
src/types/: data_buffer.hpp  data_item.hpp  definitions.h  snapshot.hpp  transaction_id.hpp
src/util/: 32bit_set.hpp  backoff.hpp  encode_key.hpp  epoch_framework.hpp  logger.hpp  numa.hpp  pklist_util.h  thread_key_storage.h
tests/: CMakeLists.txt  concurrent_create_table_test.cpp  create_secondary_index_test.cpp  data_definition_test.cpp  database_index_test.cpp  database_test.cpp  delete_secondary_index_test.cpp  durability_test.cpp  handler_transaction_test.cpp  insert_update_write_test.cpp  issue_test.cpp  manipulate_secondary_index_test.cpp  read_secondary_index_test.cpp  reverse_scan_test.cpp  scan_secondary_index_test.cpp  secondary_index_durability_test.cpp  secondary_index_logging_test.cpp  secondary_index_test.cpp  secondary_index_type_test.cpp  simple_read_write.cpp  simple_secondary_index_test.cpp  test_helper.hpp  unique_secondary_index_test.cpp  update_secondary_index_test.cpp  write_secondary_index_test.cpp
tests/unit-tests/: aborted_delete_scan_test.cpp  concurrency_control_test.cpp  concurrent_table_test.cpp  index_test.cpp  insert_and_update_secondary_index_test.cpp  insert_and_update_test.cpp  lock_test.cpp  precision_locking_self_conflict_test.cpp  precision_locking_test.cpp  read_your_write_test.cpp  scan_delete_visibility_test.cpp  thread_pool_test.cpp
